KD#81, KD#82 - Fix for input box active cursor barely visible in Windows Firefox.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -126,6 +126,10 @@ em strong {
 	font-style : italic;
 }
 
+input, textarea {
+    padding : 2px 4px;
+}
+
 .subfield-label {
     font-style : italic;
 }
